[package]
name = "minecraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
error-chain = "0.12.4"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json =  { version ="1.0.99"}
tempfile = "3.6.0"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
